monitoring/prometheus-setup/prometheus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # Use the host you used in your kubernetes Ingress Configurations
    - host: prometheus.example.com
      http:
        paths:
          - backend:
              serviceName: prometheus-service
              servicePort: 8080
